--- a/db.conf
+++ b/db.conf
@@ -23,7 +23,7 @@ repl-diskless-sync-delay 5
 repl-disable-tcp-nodelay no
 slave-priority 100
 maxclients 10000
-maxmemory 80mb
+maxmemory 8gb
 appendonly no
 appendfilename "appendonly.aof"
 appendfsync everysec
