--- a/db.conf
+++ b/db.conf
@@ -51,3 +51,8 @@ client-output-buffer-limit slave 256mb 64mb 60
 client-output-buffer-limit pubsub 32mb 8mb 60
 hz 10
 aof-rewrite-incremental-fsync yes
+
+save 1800 1
+save 900 10
+save 300 100
+save 60 1000
