--- a/db.conf
+++ b/db.conf
@@ -9,12 +9,13 @@ supervised no
 pidfile "/var/run/redis_6379.pid"
 loglevel notice
 logfile "db_log.txt"
-databases 2
+databases 1
 
 stop-writes-on-bgsave-error yes
 rdbcompression yes
 rdbchecksum yes
 dbfilename "db.rdb"
+rdb-del-sync-files no
 dir ./
 slave-serve-stale-data yes
 slave-read-only yes
@@ -32,6 +33,7 @@ no-appendfsync-on-rewrite no
 auto-aof-rewrite-percentage 100
 auto-aof-rewrite-min-size 64mb
 aof-load-truncated yes
+aof-use-rdb-preamble yes
 lua-time-limit 5000
 slowlog-log-slower-than 10000
 slowlog-max-len 128
@@ -47,12 +49,12 @@ zset-max-ziplist-value 64
 hll-sparse-max-bytes 3000
 activerehashing yes
 client-output-buffer-limit normal 0 0 0
-client-output-buffer-limit slave 256mb 64mb 60
-client-output-buffer-limit pubsub 32mb 8mb 60
+client-output-buffer-limit slave 0 0 0
+client-output-buffer-limit pubsub 0 0 0
 hz 10
 aof-rewrite-incremental-fsync yes
+rdb-save-incremental-fsync yes
 
-save 1800 1
-save 900 10
-save 300 100
-save 60 1000
+save 900 1
+save 300 10
+save 60 10000
